@@ -6,8 +6,17 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpRequest.BodyPublishers;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 
 public final class URLReader {
 
@@ -16,52 +25,45 @@ public final class URLReader {
     }
 
     public static String getRequest(String request) throws IOException {
-        URL url = new URL(request);
-        URLConnection connection = url.openConnection();
-
-        try (InputStream input = connection.getInputStream()) {
-            return readStream(input);
+        try {
+            HttpRequest httpRequest = HttpRequest.newBuilder()
+                    .uri(new URI(request))
+                    .GET()
+                    .build();
+            HttpResponse<String> httpResponse = HttpClient.newBuilder()
+                    .build()
+                    .send(httpRequest, BodyHandlers.ofString());
+            return httpResponse.body();
+        } catch (URISyntaxException | InterruptedException e) {
+            throw new IOException(e);
         }
     }
 
     public static String postRequest(String request, String json) throws IOException {
-        URL url = new URL(request);
-        URLConnection connection = url.openConnection();
-        HttpURLConnection httpConnection = (HttpURLConnection) connection;
-        httpConnection.setRequestMethod("POST");
-        httpConnection.setDoOutput(true);
-
-        byte[] out = json.getBytes();
-
-        httpConnection.setFixedLengthStreamingMode(out.length);
-        httpConnection.setRequestProperty("Content-Type", "application/json");
-        httpConnection.connect();
-        try(OutputStream os = httpConnection.getOutputStream()) {
-            os.write(out);
-        }
-
-        try (InputStream input = connection.getInputStream()) {
-            return readStream(input);
-        } catch (IOException ioe) {
-            try (InputStream error = httpConnection.getErrorStream()) {
-                if (error != null) {
-                    String errorMessage = readStream(error);
-                    throw new IOException(errorMessage, ioe);
-                }
-                throw new IOException("Unknown error!", ioe);
-            }
+        try {
+            HttpRequest httpRequest = HttpRequest.newBuilder()
+                    .uri(new URI(request))
+                    .header("Content-Type", "application/json")
+                    .POST(BodyPublishers.ofString(json))
+                    .build();
+            HttpResponse<String> httpResponse = HttpClient.newBuilder()
+                    .build()
+                    .send(httpRequest, BodyHandlers.ofString());
+            return httpResponse.body();
+        } catch (URISyntaxException | InterruptedException e) {
+            throw new IOException(e);
         }
     }
 
     static String readStream(InputStream inputStream) throws IOException {
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, "UTF8"))) {
-            StringBuilder htmlBuilder = new StringBuilder();
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8))) {
+            StringBuilder builder = new StringBuilder();
             String line = reader.readLine();
             while (line != null) {
-                htmlBuilder.append(line).append('\n');
+                builder.append(line).append('\n');
                 line = reader.readLine();
             }
-            return htmlBuilder.toString();
+            return builder.toString();
         }
     }
 }
